cmake_minimum_required(VERSION 3.5.1)
project(calculator)
INCLUDE_DIRECTORIES(calculator)
add_subdirectory(calculator)
add_executable(start_cal Main.cpp)
TARGET_LINK_LIBRARIES(start_cal calculator)
set(EXECUTABLE_OUTPUT_PATH "bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../lib)
SET(RUNTIME_OUTPUT_DIRECTORY ../bin)
